duong commit v2 5/9